[gd_scene load_steps=2 format=3 uid="uid://b8ribk4n0q8w1"]

[ext_resource type="Script" uid="uid://c60k5ekwpxfw7" path="res://scripts/BetPopup.gd" id="1_slkjq"]

[node name="BetPopup" type="PopupPanel"]
oversampling_override = 1.0
visible = true
script = ExtResource("1_slkjq")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BetLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BetInput" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
